feat: add adobe client_id for pdf viewer

--- a/publish/index.html
+++ b/publish/index.html
@@ -2,7 +2,7 @@
 <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
 <script type="text/javascript">
 	document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
-		var adobeDCView = new AdobeDC.View({clientId: "<YOUR_CLIENT_ID>", divId: "adobe-dc-view"});
+		var adobeDCView = new AdobeDC.View({clientId: "96a912242dc9404480bd2c3e7b2fc91e", divId: "adobe-dc-view"});
 		adobeDCView.previewFile({
 			content:{location: {url: "https://saffathasan.github.io/resume/resume-simple.pdf"}},
 			metaData:{fileName: "resume-simple.pdf"}
