--- a/publish/index.html
+++ b/publish/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<head>
+	<title>Saffat Hasan's Resume</title>
+	<meta name="description" content="Saffat Hasan's Resume">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body style="margin: 0px; overflow: hidden">
 	<embed src="/resume-simple.pdf" width="100%" height="100%"/>
 </body>
