--- a/publish/index.html
+++ b/publish/index.html
@@ -4,5 +4,5 @@
 	<meta name="description" content="Saffat Hasan's Resume">
 </head>
 <body style="margin: 0px; overflow: hidden">
-	<embed src="/resume-simple.pdf" width="100%" height="100%"/>
+	<embed src="/resume-simple.pdf" width="99999" height="99999"/>
 </body>
