feat: set defaultViewMode to FIT_PAGE

--- a/publish/index.html
+++ b/publish/index.html
@@ -11,8 +11,8 @@
 			var adobeDCView = new AdobeDC.View({clientId: "96a912242dc9404480bd2c3e7b2fc91e", divId: "adobe-dc-view"});
 			adobeDCView.previewFile({
 				content:{location: {url: "/resume-simple.pdf"}},
-				metaData:{fileName: "resume-simple.pdf"}
-			}, {});
+				metaData:{fileName: "Saffat Hasan Resume.pdf"}
+			}, {defaultViewMode: "FIT_PAGE"});
 		});
 	</script>
 </body>
